deploy/plantbook/db_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantbook-testdb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: plantbook-testdb
  template:
    metadata:
      labels:
        app: plantbook-testdb
    spec:
      containers:
        - image: postgres:13.2
          name: plantbook-testdb
          ports:
            - containerPort: 5432
