deploy/plantbook/db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: plantbook-testdb
  labels:
    app: plantbook-testdb
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: tcp
  selector:
    app: plantbook-testdb
