deploy/plantbook/service.yml
apiVersion: v1
kind: Service
metadata:
  name: plantbook
  labels:
    app: plantbook
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: tcp
  selector:
    app: plantbook
